--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "@kevit/botbuilder-storage-mongo-v4",
   "version": "1.0.1",
   "description": "Botbuilder v4 MongoDB Storage",
-  "main": "index.js",
+  "main": "./lib/index.js",
+  "typings": "./lib/index.d.ts",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -11,12 +13,25 @@
     "storage",
     "mongo"
   ],
-  "author": "Piyush Kacha <piyush.kacha@kevit.io>",
+  "author": "Vikas Padaliya <vikas.padaliya@kevit.io>",
   "license": "GPL-3.0",
   "dependencies": {
-    "mongodb": "^3.1.13"
+    "mongodb": "^3.6.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^7.3.1",
+    "prettier": "^2.0.5",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.5",
+    "@types/mongodb": "^3.5.25",
+    "botbuilder-core": "^4.9.3",
+    "@typescript-eslint/eslint-plugin": "^3.4.0",
+    "@typescript-eslint/parser": "^3.4.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-prettier": "^3.1.4"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://gitlab.com/kevit-technologies-open-source/botbuilder-storage-mongo-v4.git"
