--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kevit/botbuilder-storage-mongo-v4",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Botbuilder v4 MongoDB Storage",
   "main": "index.js",
   "scripts": {
@@ -14,7 +14,7 @@
   "author": "Piyush Kacha <piyush.kacha@kevit.io>",
   "license": "GPL-3.0",
   "dependencies": {
-    "mongodb": "^3.1.13"
+    "mongodb": "5.7.0"
   },
   "devDependencies": {},
   "repository": {
