--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kevit/botbuilder-storage-mongo-v4",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Botbuilder v4 MongoDB Storage",
   "main": "index.js",
   "scripts": {
@@ -19,10 +19,10 @@
   "devDependencies": {},
   "repository": {
     "type": "git",
-    "url": "git+https://gitlab.com/kevit-technologies-open-source/botbuilder-storage-mongo-v4.git"
+    "url": "git+https://github.com/kevit-io/botbuilder-storage-mongo-v4.git"
   },
   "bugs": {
-    "url": "https://gitlab.com/kevit-technologies-open-source/botbuilder-storage-mongo-v4/issues"
+    "url": "https://github.com/kevit-io/botbuilder-storage-mongo-v4/issues"
   },
-  "homepage": "https://gitlab.com/kevit-technologies-open-source/botbuilder-storage-mongo-v4#readme"
+  "homepage": "https://github.com/kevit-io/botbuilder-storage-mongo-v4#readme"
 }
